api get list lastest version of document and pagination